--- a/config-local.yaml
+++ b/config-local.yaml
@@ -14,7 +14,7 @@ db:
     password: UAT1VOzR7C
     db: 0
   mysql:
-    dsn: root:7QZKO020y1@tcp(localhost:3306)/conscience_backend?parseTime=true&charset=utf8mb4&loc=Hongkong
+    dsn: root:7QZKO020y1@tcp(localhost:3306)/conscience_backend?parseTime=true&charset=utf8mb4
   mongo:
     uri: mongodb://root:4LY0Ul9yNw@127.0.0.1:27017/admin?authSource=admin
     db:
