--- a/config-test.yaml
+++ b/config-test.yaml
@@ -14,6 +14,6 @@ db:
     password: UAT1VOzR7C
     db: 0
   mysql:
-    dsn: root:7QZKO020y1@tcp(mysql:3306)/conscience_backend?parseTime=true&charset=utf8mb4&loc=Hongkong
+    dsn: root:7QZKO020y1@tcp(mysql:3306)/conscience_backend?parseTime=true&charset=utf8mb4
   mongo:
     uri: mongodb://root:cMP3LuSKKk@mongo-mongodb:27017/admin?authSource=admin
